--- a/program.dSYM/Contents/Resources/Relocations/x86_64/program.yml
+++ b/program.dSYM/Contents/Resources/Relocations/x86_64/program.yml
@@ -2,22 +2,25 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/ronan/Library/CloudStorage/OneDrive-DeakinUniversity/Code/CPP/Maze_generation/program'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000008A0, symSize: 0x120 }
-  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _app, symObjAddr: 0x11E3C, symBinAddr: 0x100003000, symSize: 0x0 }
-  - { offsetInCU: 0x3086, offset: 0x3086, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB8ue170006EPKc, symObjAddr: 0x1120, symBinAddr: 0x1000019C0, symSize: 0x20 }
-  - { offsetInCU: 0x56BF, offset: 0x56BF, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000008A0, symSize: 0x120 }
-  - { offsetInCU: 0x56DD, offset: 0x56DD, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B8ue170006ILi0EEEPKc, symObjAddr: 0x120, symBinAddr: 0x1000009C0, symSize: 0x30 }
-  - { offsetInCU: 0x571A, offset: 0x571A, size: 0x8, addend: 0x0, symName: __Z5setupR3App, symObjAddr: 0x150, symBinAddr: 0x1000009F0, symSize: 0x190 }
-  - { offsetInCU: 0x577A, offset: 0x577A, size: 0x8, addend: 0x0, symName: __Z11move_playerR3App, symObjAddr: 0x2E0, symBinAddr: 0x100000B80, symSize: 0x8A0 }
-  - { offsetInCU: 0x57BE, offset: 0x57BE, size: 0x8, addend: 0x0, symName: __Z10draw_tilesRK3App, symObjAddr: 0xB80, symBinAddr: 0x100001420, symSize: 0x210 }
-  - { offsetInCU: 0x5848, offset: 0x5848, size: 0x8, addend: 0x0, symName: __Z13is_valid_movePA15_4Tileii, symObjAddr: 0xD90, symBinAddr: 0x100001630, symSize: 0x140 }
-  - { offsetInCU: 0x58FA, offset: 0x58FA, size: 0x8, addend: 0x0, symName: __Z4moveii, symObjAddr: 0xED0, symBinAddr: 0x100001770, symSize: 0x110 }
-  - { offsetInCU: 0x5933, offset: 0x5933, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B8ue170006ILi0EEEPKc, symObjAddr: 0xFE0, symBinAddr: 0x100001880, symSize: 0x50 }
-  - { offsetInCU: 0x5975, offset: 0x5975, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B8ue170006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x1030, symBinAddr: 0x1000018D0, symSize: 0x30 }
-  - { offsetInCU: 0x59CB, offset: 0x59CB, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthB8ue170006EPKc, symObjAddr: 0x1060, symBinAddr: 0x100001900, symSize: 0x30 }
-  - { offsetInCU: 0x59ED, offset: 0x59ED, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B8ue170006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x1090, symBinAddr: 0x100001930, symSize: 0x30 }
-  - { offsetInCU: 0x5A43, offset: 0x5A43, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B8ue170006ENS_18__default_init_tagE, symObjAddr: 0x10C0, symBinAddr: 0x100001960, symSize: 0x10 }
-  - { offsetInCU: 0x5A75, offset: 0x5A75, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B8ue170006ENS_18__default_init_tagE, symObjAddr: 0x10D0, symBinAddr: 0x100001970, symSize: 0x20 }
-  - { offsetInCU: 0x5AA7, offset: 0x5AA7, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B8ue170006Ev, symObjAddr: 0x10F0, symBinAddr: 0x100001990, symSize: 0x20 }
-  - { offsetInCU: 0x5ACF, offset: 0x5ACF, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B8ue170006Ev, symObjAddr: 0x1110, symBinAddr: 0x1000019B0, symSize: 0x10 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000010D0, symSize: 0x130 }
+  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _app, symObjAddr: 0x114E8, symBinAddr: 0x100003000, symSize: 0x0 }
+  - { offsetInCU: 0x3092, offset: 0x3092, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB8ue170006EPKc, symObjAddr: 0xBA0, symBinAddr: 0x100001C70, symSize: 0x20 }
+  - { offsetInCU: 0x56CB, offset: 0x56CB, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000010D0, symSize: 0x130 }
+  - { offsetInCU: 0x56E9, offset: 0x56E9, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B8ue170006ILi0EEEPKc, symObjAddr: 0x130, symBinAddr: 0x100001200, symSize: 0x30 }
+  - { offsetInCU: 0x5726, offset: 0x5726, size: 0x8, addend: 0x0, symName: __Z5setupR3App, symObjAddr: 0x160, symBinAddr: 0x100001230, symSize: 0x190 }
+  - { offsetInCU: 0x5786, offset: 0x5786, size: 0x8, addend: 0x0, symName: __Z18spawn_orange_tilesR3App, symObjAddr: 0x2F0, symBinAddr: 0x1000013C0, symSize: 0x80 }
+  - { offsetInCU: 0x57E6, offset: 0x57E6, size: 0x8, addend: 0x0, symName: __Z11move_playerR3App, symObjAddr: 0x370, symBinAddr: 0x100001440, symSize: 0x230 }
+  - { offsetInCU: 0x5862, offset: 0x5862, size: 0x8, addend: 0x0, symName: __Z10draw_tilesRK3App, symObjAddr: 0x5A0, symBinAddr: 0x100001670, symSize: 0x210 }
+  - { offsetInCU: 0x58EC, offset: 0x58EC, size: 0x8, addend: 0x0, symName: __Z10random_intii, symObjAddr: 0x7B0, symBinAddr: 0x100001880, symSize: 0x30 }
+  - { offsetInCU: 0x5926, offset: 0x5926, size: 0x8, addend: 0x0, symName: __Z13is_empty_tileR3Appii, symObjAddr: 0x7E0, symBinAddr: 0x1000018B0, symSize: 0x30 }
+  - { offsetInCU: 0x596E, offset: 0x596E, size: 0x8, addend: 0x0, symName: __Z13is_valid_movePA15_4Tileii, symObjAddr: 0x810, symBinAddr: 0x1000018E0, symSize: 0x140 }
+  - { offsetInCU: 0x5A1B, offset: 0x5A1B, size: 0x8, addend: 0x0, symName: __Z4moveii, symObjAddr: 0x950, symBinAddr: 0x100001A20, symSize: 0x110 }
+  - { offsetInCU: 0x5A51, offset: 0x5A51, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B8ue170006ILi0EEEPKc, symObjAddr: 0xA60, symBinAddr: 0x100001B30, symSize: 0x50 }
+  - { offsetInCU: 0x5A93, offset: 0x5A93, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B8ue170006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0xAB0, symBinAddr: 0x100001B80, symSize: 0x30 }
+  - { offsetInCU: 0x5AE9, offset: 0x5AE9, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthB8ue170006EPKc, symObjAddr: 0xAE0, symBinAddr: 0x100001BB0, symSize: 0x30 }
+  - { offsetInCU: 0x5B0B, offset: 0x5B0B, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B8ue170006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0xB10, symBinAddr: 0x100001BE0, symSize: 0x30 }
+  - { offsetInCU: 0x5B61, offset: 0x5B61, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B8ue170006ENS_18__default_init_tagE, symObjAddr: 0xB40, symBinAddr: 0x100001C10, symSize: 0x10 }
+  - { offsetInCU: 0x5B93, offset: 0x5B93, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B8ue170006ENS_18__default_init_tagE, symObjAddr: 0xB50, symBinAddr: 0x100001C20, symSize: 0x20 }
+  - { offsetInCU: 0x5BC5, offset: 0x5BC5, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B8ue170006Ev, symObjAddr: 0xB70, symBinAddr: 0x100001C40, symSize: 0x20 }
+  - { offsetInCU: 0x5BED, offset: 0x5BED, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B8ue170006Ev, symObjAddr: 0xB90, symBinAddr: 0x100001C60, symSize: 0x10 }
 ...
